voice recording and displaying in same page.

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,151 @@
-.App {
+.controls-container {
+  height: 15%;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0.5rem;
+}
+
+.recorder-display {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+}
+
+@keyframes animated-block {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.recording-indicator {
+  width: 10px;
+  height: 10px;
+  margin-right: 0.5rem;
+  border-radius: 50%;
+  background-color: #099fff;
+  animation-name: animated-block;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+.recording-time {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cancel-button-container {
+  width: 20%;
+  display: grid;
+  place-content: center;
+  animation-name: animated-block;
+  animation-duration: 2s;
+}
+
+.start-button,
+.cancel-button {
+  border: none;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.cancel-button:hover {
+  color: #fd1c03;
+}
+
+.cancel-button {
+  width: 25px;
+  height: 25px;
+}
+
+.start-button-container {
+  width: 15%;
+  display: grid;
+  place-content: center;
+}
+
+.start-button:hover {
+  color: #41295a;
+  background-color: #f2ea02;
+}
+
+.start-button {
+  width: 40px;
+  height: 40px;
+}
+
+// list
+.recordings-container {
+  height: 85%;
+  padding: 0 2rem;
+}
+
+.recordings-container h1 {
+  margin-bottom: 1rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.no-records {
+  height: 100%;
+  display: grid;
+  place-content: center;
+  place-items: center;
+  font-size: 2rem;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.recordings-list::-webkit-scrollbar {
+  width: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.recordings-list::-webkit-scrollbar-track {
+  background: #e4d3cf;
+}
+
+.recordings-list::-webkit-scrollbar-thumb {
+  background: #099fff;
+}
+
+.recordings-list {
+  max-height: 85%;
+  display: grid;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  overflow-y: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.record {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.record audio {
+  min-width: 80%;
+  max-width: 60%;
+}
+
+.delete-button-container {
+  min-width: 20%;
+  max-width: 10%;
+  display: grid;
+  place-content: center;
+}
+
+.delete-button {
+  width: 25px;
+  height: 25px;
+  border: none;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.delete-button:hover {
+  color: #fd1c03;
 }
