--- a/src/App.css
+++ b/src/App.css
@@ -1,151 +1,28 @@
-.controls-container {
-  height: 15%;
+/* App style */
+header {
+  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
+              0px 4px 5px 0px rgb(0 0 0 / 14%),
+              0px 1px 10px 0px rgb(0 0 0 / 12%);
+  background: #ffffff;
+}
+
+footer {
+  height: 30px;
+  font-size: 12px;
+  color: #333;
+}
+
+.container {
+  margin: auto;
+  max-width: 90%;
+}
+
+.logo {
+  margin: 0;
+  padding: 15px 0;
+}
+
+.record-wrapper {
   display: flex;
-  justify-content: space-evenly;
-  padding: 0.5rem;
-}
-
-.recorder-display {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  font-size: 2rem;
-}
-
-@keyframes animated-block {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.recording-indicator {
-  width: 10px;
-  height: 10px;
-  margin-right: 0.5rem;
-  border-radius: 50%;
-  background-color: #099fff;
-  animation-name: animated-block;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-}
-
-.recording-time {
-  width: 80%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.cancel-button-container {
-  width: 20%;
-  display: grid;
-  place-content: center;
-  animation-name: animated-block;
-  animation-duration: 2s;
-}
-
-.start-button,
-.cancel-button {
-  border: none;
-  border-radius: 50%;
-  background-color: #fff;
-  cursor: pointer;
-}
-
-.cancel-button:hover {
-  color: #fd1c03;
-}
-
-.cancel-button {
-  width: 25px;
-  height: 25px;
-}
-
-.start-button-container {
-  width: 15%;
-  display: grid;
-  place-content: center;
-}
-
-.start-button:hover {
-  color: #41295a;
-  background-color: #f2ea02;
-}
-
-.start-button {
-  width: 40px;
-  height: 40px;
-}
-
-// list
-.recordings-container {
-  height: 85%;
-  padding: 0 2rem;
-}
-
-.recordings-container h1 {
-  margin-bottom: 1rem;
-  text-align: center;
-}
-
-.no-records {
-  height: 100%;
-  display: grid;
-  place-content: center;
-  place-items: center;
-  font-size: 2rem;
-  text-align: center;
-}
-
-.recordings-list::-webkit-scrollbar {
-  width: 5px;
-}
-
-.recordings-list::-webkit-scrollbar-track {
-  background: #e4d3cf;
-}
-
-.recordings-list::-webkit-scrollbar-thumb {
-  background: #099fff;
-}
-
-.recordings-list {
-  max-height: 85%;
-  display: grid;
-  justify-content: center;
-  overflow-y: auto;
-}
-
-.record {
-  display: flex;
-  justify-content: space-evenly;
-  padding: 0.5rem;
-}
-
-.record audio {
-  min-width: 80%;
-  max-width: 60%;
-}
-
-.delete-button-container {
-  min-width: 20%;
-  max-width: 10%;
-  display: grid;
-  place-content: center;
-}
-
-.delete-button {
-  width: 25px;
-  height: 25px;
-  border: none;
-  border-radius: 50%;
-  background-color: #fff;
-  cursor: pointer;
-}
-
-.delete-button:hover {
-  color: #fd1c03;
+  height: calc(100vh - 112px);
 }
