--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,13 @@ html {
   line-height: 1.2;
 }
 
+html,
+body,
+#root,
+.App {
+  height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,6 +22,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
 }
 
 code {
