--- a/src/components/recorder-controller.css
+++ b/src/components/recorder-controller.css
@@ -50,17 +50,29 @@
   margin: 0 5px;
   border: none;
   border-radius: 50%;
-  background-color: #fff;
+  box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%),
+              0px 6px 10px 0px rgb(0 0 0 / 14%),
+              0px 1px 18px 0px rgb(0 0 0 / 12%);
+  color: #ffffff;
   cursor: pointer;
 }
 
+.start-button {
+  background: #4caf50;
+}
+
+.cancel-button {
+  background: #f44336;
+}
+
 .cancel-button:hover {
+  background: #ffffff;
   color: #fd1c03;
 }
 
 .start-button:hover {
-  color: #41295a;
-  background-color: #f2ea02;
+  color: #4caf50;
+  background-color: #ffffff;
 }
 
 .start-button,
