--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,9 @@ footer {
   padding: 15px 0;
 }
 
-.record-wrapper {
-  display: flex;
-  height: calc(100vh - 112px);
+@media only screen and (min-width: 680px) {
+  .record-wrapper {
+    display: flex;
+    height: calc(100vh - 112px);
+  } 
 }
