--- a/src/components/recorder-controller.css
+++ b/src/components/recorder-controller.css
@@ -1,5 +1,5 @@
 .controls-container {
-  width: 60%;
+  width: 100%;
   display: flex;
   text-align: center;
   padding: 15px;
@@ -79,4 +79,10 @@
 .cancel-button {
   width: 40px;
   height: 40px;
+}
+
+@media only screen and (min-width: 680px) {
+  .controls-container {
+    width: 60%;
+  }
 }
