--- a/src/components/recordings-list.css
+++ b/src/components/recordings-list.css
@@ -1,5 +1,5 @@
 .recordings-container {
-  width: 40%;
+  width: 100%;
   border-right: 1px solid #dddddd;
   border-left: 1px solid #dddddd;
 }
@@ -89,4 +89,10 @@
 
 .delete-button:hover {
   color: #fd1c03;
+}
+
+@media only screen and (min-width: 680px) {
+  .recordings-container {
+    width: 40%;
+  }
 }
