UI mobile design updates

--- a/src/components/recorder-controller.css
+++ b/src/components/recorder-controller.css
@@ -1,19 +1,11 @@
 .controls-container {
   width: 100%;
+  height: 40%;
   display: flex;
   text-align: center;
   padding: 15px;
   flex-direction: column;
   justify-content: center;
-}
-
-@keyframes animated-block {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
 }
 
 .recording-indicator {
@@ -31,7 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 8rem;
+  font-size: 4rem;
 }
 
 .cancel-button-container {
@@ -81,8 +73,21 @@
   height: 40px;
 }
 
+@keyframes animated-block {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @media only screen and (min-width: 680px) {
   .controls-container {
     width: 60%;
+    height: 100%;
+  }
+  .recording-time {
+    font-size: 8rem;
   }
 }
