--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 /* App style */
+.record-wrapper {
+  height: calc(100vh - 112px);
+}
+
 header {
+  position: relative;
+  z-index: 99;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
               0px 4px 5px 0px rgb(0 0 0 / 14%),
               0px 1px 10px 0px rgb(0 0 0 / 12%);
@@ -9,6 +15,7 @@ header {
 footer {
   height: 30px;
   font-size: 12px;
+  border-top: 1px solid #dddddd;
   color: #333;
 }
 
@@ -25,6 +32,5 @@ footer {
 @media only screen and (min-width: 680px) {
   .record-wrapper {
     display: flex;
-    height: calc(100vh - 112px);
-  } 
+  }
 }
