--- a/src/components/recordings-list.css
+++ b/src/components/recordings-list.css
@@ -1,7 +1,9 @@
 .recordings-container {
   width: 100%;
-  border-right: 1px solid #dddddd;
-  border-left: 1px solid #dddddd;
+  height: 60%;
+  border: 1px solid #dddddd;
+  border-bottom: 0;
+  overflow-y: auto;
 }
 
 .recordings-container h1 {
@@ -22,24 +24,11 @@
   padding-top: 15px;
 }
 
-.recordings-list::-webkit-scrollbar {
-  width: 5px;
-}
-
-.recordings-list::-webkit-scrollbar-track {
-  background: #e4d3cf;
-}
-
-.recordings-list::-webkit-scrollbar-thumb {
-  background: #099fff;
-}
-
 .recordings-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 1rem 0.5rem;
-  overflow-y: auto;
+  padding: 0.5rem 0.5rem 1.5rem;
 }
 
 .accordian-title {
@@ -54,11 +43,24 @@
 }
 
 .record {
+  position: relative;
+  z-index: 0;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
-  padding-bottom: 0.5rem;
+  padding-bottom: 1.5rem;
   background: #ffffff;
+}
+
+.is-recorded-time {
+  position: absolute;
+  top: 40px;
+  left: 20px;
+  padding: 0px 10px 5px;
+  line-height: 1;
+  font-size: 12px;
+  border-radius: 0 0 5px 5px;
+  background: #f1f3f4;
 }
 
 .record:last-child {
@@ -94,5 +96,21 @@
 @media only screen and (min-width: 680px) {
   .recordings-container {
     width: 40%;
+    height: 100%;
+    border: 0;
+    border-right: 1px solid #dddddd;
+    border-left: 1px solid #dddddd;
+  }
+
+  .recordings-container::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  .recordings-container::-webkit-scrollbar-track {
+    background: #dddddd;
+  }
+  
+  .recordings-container::-webkit-scrollbar-thumb {
+    background: #000000;
   }
 }
