--- a/src/components/googlesignbtn.css
+++ b/src/components/googlesignbtn.css
@@ -40,7 +40,7 @@
   }
 
   .google-login-button button {
-    margin: 0 0 0 15px;
-    padding: 5px 10px;
+    margin: 0;
+    margin-left: 10px;
   }
 }
