--- a/src/components/googlesignbtn.css
+++ b/src/components/googlesignbtn.css
@@ -10,7 +10,7 @@
 .google-login-button button {
   display: flex;
   margin: 5px 0;
-  padding: 5px 10px;
+  padding: 0 10px;
   border: none;
   background: #ea4335;
   border-radius: 5px;
