UI updates and signed in users logic

--- a/src/styles/recorder-controller.css
+++ b/src/styles/recorder-controller.css
@@ -20,9 +20,8 @@
   font-size: 4rem;
 }
 
-.recording-time > * {
-  display: inline-block;
-  vertical-align: center;
+.clock-colon {
+  padding-bottom: 20px;
 }
 
 .cancel-button-container {
