--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 html,
 body,
 #root,
-.App {
+.app-wrapper {
   height: 100vh;
 }
 
@@ -22,7 +22,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 16px;
 }
 
 code {
