--- a/src/components/recordlist/index.css
+++ b/src/components/recordlist/index.css
@@ -11,14 +11,42 @@
 }
 
 .data-loader {
+  overflow: hidden;
+  position: relative;
+  z-index: 0;
+  top: 2px;
   width: 35%;
-  height: 10px;
-  background: #eeeeee;
+  height: 16px;
+  border-radius: 16px;
+  background: #f5f5f5;
 }
+
+.data-loader::before,
+.data-loader::after {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  left: -10%;
+  top: -25px;
+  width: 20px;
+  background: #f9f9f9;
+  bottom: -15px;
+  transform: rotate(45deg);
+}
+
+.data-loader::after {
+  animation: dataLoader 350ms infinite;
+}
+
+.data-loader::before {
+  animation: dataLoader 350ms 250ms infinite;
+}
+
 .data-loader.data-loader_audio {
   width: 100%;
-  height: 54px;
-  margin-bottom: 5px;
+  height: 34px;
+  margin-bottom: 10px;
+  border-radius: 34px;
 }
 
 .records-list {
@@ -53,4 +81,13 @@
 
 .records-list li.active .accordian-content {
   display: block;
+}
+
+@keyframes dataLoader {
+  from {
+    left: -10%;
+  }
+  to {
+    left: 110%;
+  }
 }
