--- a/src/components/recordlist/index.css
+++ b/src/components/recordlist/index.css
@@ -17,7 +17,6 @@
   top: 2px;
   width: 35%;
   height: 16px;
-  border-radius: 16px;
   background: #f5f5f5;
 }
 
@@ -26,34 +25,33 @@
   content: '';
   position: absolute;
   z-index: 1;
-  left: -10%;
   top: -25px;
   width: 20px;
-  background: #f9f9f9;
+  background: #ffffff;
   bottom: -15px;
   transform: rotate(45deg);
 }
 
 .data-loader::after {
-  animation: dataLoader 350ms infinite;
+  left: -10%;
+  /* animation: dataLoaderAfter 500ms infinite; */
 }
 
 .data-loader::before {
-  animation: dataLoader 350ms 250ms infinite;
+  left: -20%;
+  /* animation: dataLoaderBefore 500ms 200ms infinite; */
 }
 
 .data-loader.data-loader_audio {
   width: 100%;
   height: 34px;
   margin-bottom: 10px;
-  border-radius: 34px;
 }
 
 .records-list {
   width: 40%;
   overflow: hidden;
   overflow-y: auto;
-  /* border-right: 1px solid #dddddd; */
   border-left: 1px solid #dddddd;
 }
 
@@ -83,11 +81,20 @@
   display: block;
 }
 
-@keyframes dataLoader {
+@keyframes dataLoaderAfter {
   from {
     left: -10%;
   }
   to {
     left: 110%;
+  }
+}
+
+@keyframes dataLoaderBefore {
+  from {
+    left: -20%;
+  }
+  to {
+    left: 120%;
   }
 }
