--- a/src/components/recorder/index.css
+++ b/src/components/recorder/index.css
@@ -37,6 +37,20 @@
   margin-top: 15px;
 }
 
+.recorded-audio span,
+.recorded-audio audio {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.recorded-audio audio {
+  margin-left: 10px;
+  border-radius: 54px;
+  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
+              0px 4px 5px 0px rgb(0 0 0 / 14%),
+              0px 1px 10px 0px rgb(0 0 0 / 12%)
+}
+
 .guest-msg p {
   margin: 10px 0;
 }
