Typo updates screenshot updated

--- a/src/components/recordlist/index.css
+++ b/src/components/recordlist/index.css
@@ -52,6 +52,7 @@
   width: 40%;
   overflow: hidden;
   overflow-y: auto;
+  border-right: 1px solid #dddddd;
   border-left: 1px solid #dddddd;
 }
 
