--- a/src/components/recorder/index.css
+++ b/src/components/recorder/index.css
@@ -33,18 +33,23 @@
 }
 
 .recorded-audio {
+  position: relative;
   height: 54px;
   margin-top: 15px;
 }
 
-.recorded-audio span,
-.recorded-audio audio {
-  display: inline-block;
-  vertical-align: middle;
+.recorded-audio span {
+  position: absolute;
+  top: -15px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 2px 15px 0;
+  font-size: 11px;
+  border-radius: 5px 5px 0 0;
+  background-color: #f1f3f4;
 }
 
 .recorded-audio audio {
-  margin-left: 10px;
   border-radius: 54px;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
               0px 4px 5px 0px rgb(0 0 0 / 14%),
@@ -68,4 +73,20 @@
 
 .clock-colon {
   padding-bottom: 14px;
+}
+
+.recorder-controllers .start-video {
+  background-color: #f8f9fa;
+}
+
+.recorder-controllers .start-record {
+  background-color: #ffc107;
+}
+
+.recorder-controllers .stop-record {
+  background-color: #dc3545;
+}
+
+.recorder-controllers .file-upload {
+  background-color: #0d6efd;
 }
