--- a/src/components/recordlist/index.css
+++ b/src/components/recordlist/index.css
@@ -17,7 +17,7 @@
   top: 2px;
   width: 35%;
   height: 16px;
-  background: #f5f5f5;
+  background: #f1f1f1;
 }
 
 .data-loader::before,
@@ -27,7 +27,7 @@
   z-index: 1;
   top: -25px;
   width: 20px;
-  background: #ffffff;
+  background: #f8f9fa;
   bottom: -15px;
   transform: rotate(45deg);
 }
@@ -61,6 +61,7 @@
   font-weight: bold;
   border-top: 1px solid #dddddd;
   border-bottom: 1px solid #dddddd;
+  background: linear-gradient(45deg, rgb(243 243 243) 30%, rgb(255 255 255) 90%);
   cursor: pointer;
 }
 
@@ -76,14 +77,15 @@
 
 .audioFile-wrapper {
   position: relative;
+  z-index: 0;
   width: 50%;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 
 .audioFile-wrapper audio {
   position: relative;
+  z-index: 2;
   left: 2%;
-  z-index: 0;
   width: 96%;
   height: 34px;
   border-radius: 17px;
@@ -99,6 +101,9 @@
   left: 20px;
   padding: 4px 10px;
   font-size: 10px;
+  border-radius: 0 0 5px 5px;
+  border: 1px solid #dddddd;
+  background-color: #f9f9f9;
 }
 
 .records-list li.active .fa-chevron-right {
