--- a/src/components/googleSignin/index.css
+++ b/src/components/googleSignin/index.css
@@ -12,11 +12,17 @@
   margin: 5px 0;
   padding: 0 10px;
   border: none;
-  background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
-  border-radius: 5px;
+  border-radius: 8px;
   cursor: pointer;
-  color: #ffffff;
   align-items: center;
+  box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
+  color: var(--error);
+  transition: 0.3s ease;
+  /* background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%); */
+  background-color: transparent;
+}
+.google-auth button:active {
+  box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
 }
 
 .google-auth span {
