--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,10 +1,11 @@
 header {
   position: relative;
   z-index: 99;
-  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
+  /* box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
               0px 4px 5px 0px rgb(0 0 0 / 14%),
               0px 1px 10px 0px rgb(0 0 0 / 12%);
-  background: #ffffff;
+  background: #ffffff; */
+  box-shadow: 0rem 0.8rem 1.4rem var(--greyLight-2), -0.2rem -0.2rem 1.8rem var(--white);
 }
 
 header h1 {
