--- a/src/components/recorder/index.css
+++ b/src/components/recorder/index.css
@@ -5,7 +5,6 @@
   overflow: hidden;
   justify-content: center;
   flex-direction: column;
-  border-left: 1px solid #dddddd;
   align-items: center;
 }
 
@@ -14,12 +13,14 @@
   height: 50px;
   display: inline-block;
   margin: 10px;
-  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
-              0px 4px 5px 0px rgb(0 0 0 / 14%),
-              0px 1px 10px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
   border-radius: 50%;
-  background-color: #ffffff;
+  background-color: transparent;
   border: none;
+}
+
+.recorder-controllers button:active {
+  box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
 }
 
 .recorder-animation {
@@ -45,19 +46,16 @@
   transform: translateX(-50%);
   padding: 2px 15px 0;
   font-size: 11px;
-  border-radius: 5px 5px 0 0;
-  background-color: #f1f3f4;
 }
 
 .recorded-audio audio {
   border-radius: 54px;
-  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
-              0px 4px 5px 0px rgb(0 0 0 / 14%),
-              0px 1px 10px 0px rgb(0 0 0 / 12%)
+  box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
 }
 
 .guest-msg p {
   margin: 10px 0;
+  font-size: 14px;
 }
 
 .time-spinner {
@@ -75,7 +73,7 @@
   padding-bottom: 14px;
 }
 
-.recorder-controllers .start-video {
+/* .recorder-controllers .start-video {
   background-color: #f8f9fa;
 }
 
@@ -89,4 +87,4 @@
 
 .recorder-controllers .file-upload {
   background-color: #0d6efd;
-}
+} */
