Mobile UI/UX updates

--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -9,10 +9,17 @@ header {
 }
 
 header h1 {
-  margin: 15px 0;
+  margin: 5px 0;
 }
 
 header .container {
   display: flex;
+  align-items: center;
   justify-content: space-between;
+}
+
+@media only screen and (min-width: 680px) {
+  header h1 {
+    margin: 15px 0;
+  }
 }
