--- a/src/components/googleSignin/index.css
+++ b/src/components/googleSignin/index.css
@@ -3,6 +3,10 @@
   font-size: 0.8rem;
 }
 
+.google-auth p {
+  margin: 5px 0;
+}
+
 .google-logo {
   font-size: 1.5rem;
 }
@@ -11,14 +15,13 @@
   display: flex;
   margin: 5px 0;
   padding: 0 10px;
+  transition: 0.3s ease;
   border: none;
   border-radius: 8px;
   cursor: pointer;
   align-items: center;
   box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
   color: var(--error);
-  transition: 0.3s ease;
-  /* background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%); */
   background-color: transparent;
 }
 .google-auth button:active {
