--- a/src/components/timespinner/index.css
+++ b/src/components/timespinner/index.css
@@ -1,5 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Rampart+One&display=swap');
+.recorder-timer {
+  height: 80px;
+  margin-bottom: 35px;
+}
 
 .time-spinner {
-  font-family: 'Rampart One', sans-serif;
+  margin: 0;
+  line-height: 1;
+  font-size: 4rem;
+  font-family: 'Digital Seven', sans-serif;
+}
+
+.time-spinner span {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+@media only screen and (min-width: 680px) {
+  .time-spinner {
+    font-size: 5rem;
+  }
 }
