--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,16 @@ body,
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('./assets/fonts/OpenSans-Regular.woff') format('woff');
+  src: url('./assets/fonts/opensans-regular.woff2') format('woff2'),
+       url('./assets/fonts/opensans-regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Digital Seven';
+  src: url('./assets/fonts/digitalseven-regular.woff2') format('woff2'),
+       url('./assets/fonts/digitalseven-regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
