--- a/src/components/recorder/index.css
+++ b/src/components/recorder/index.css
@@ -82,14 +82,16 @@
   }
 
   .recorded-video  {
-    overflow: hidden;
     max-width: 100%;
-    height: 300px;
+    height: 400px;
     margin-bottom: 15px;
   }
 
   .recorded-video video {
     height: 100%;
+    border-radius: 10px;
+    border: 15px solid var(--video);
+    box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
   }
 
   .recorded-audio span {
