--- a/src/components/recordlist/index.css
+++ b/src/components/recordlist/index.css
@@ -22,35 +22,66 @@
   overflow-y: auto;
 }
 
-.audiofile-wrapper {
+.audiofile-wrapper,
+.vidoefile-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
+.records-files .tab-1,
+.records-files .tab-2 {
+  display: none;
+}
+ 
+.records-files.tab-1 .tab-1,
+.records-files.tab-2 .tab-2 {
+  display: flex;
+}
 
-.audioFile {
+.voiceFile,
+.videoFile {
   position: relative;
   z-index: 0;
   width: 100%;
   margin-bottom: 20px;
 }
 
-.audioFile audio {
+.voiceFile audio,
+.videoFile video {
   position: relative;
   z-index: 2;
-  left: 2%;
-  width: 96%;
-  height: 44px;
+  width: 100%;
   border-radius: 17px;
 }
 
-.audioFile span {
+.voiceFile audio {
+  height: 44px;
+}
+
+.videoFile video {
+  width: 100%;
+}
+
+.videoFile video {
+  width: 100%;
+}
+
+.voiceFile span,
+.videoFile span {
   position: absolute;
   z-index: 1;
-  top: 42px;
-  left: 20px;
   padding: 4px 10px;
   font-size: 10px;
+}
+
+.voiceFile span {
+  left: 20px;
+  top: 42px;
+}
+
+.videoFile span {
+  left: 10px;
+  bottom: -15px;
 }
 
 .audiofile-wrapper p {
@@ -64,15 +95,28 @@
     padding: 20px;
   }
 
+  .records-files {
+    height: calc(100% - 74px);
+  }
+
   .audiofile-wrapper p {
     font-size: 16px;
   }
 
-  .audioFile {
+  .voiceFile,
+  .videoFile {
     width: 50%;
   }
-  .records-files {
-    height: calc(100% - 74px);
+
+  .voiceFile:nth-child(n),
+  .videoFile:nth-child(n) {
+    padding-right: 5px;
+  }
+
+  .voiceFile:nth-child(2n),
+  .videoFile:nth-child(2n) {
+    padding-right: 0;
+    padding-left: 5px;
   }
 }
 
